# get_rich

./: .coverage  .gitattributes  pyproject.toml  test_height_accuracy.py  test_height_behavior.py  test_modified_keys.py
src/get_rich/: __init__.py  base_control.py  chooser.py  cli.py  file_chooser.py  filter_chooser.py  key_reader.py  messages.py  multi_chooser.py  shortcut_chooser.py  styles.py
src/getrich/: __init__.py  base_control.py  chooser.py  cli.py  file_chooser.py  filter_chooser.py  key_reader.py  messages.py  shortcut_chooser.py  styles.py
tests/: test_chooser.py  test_file_chooser.py  test_filter_chooser.py  test_multi_chooser.py  test_shortcut_chooser.py  test_visual_output.py
