[project]
name = "get-rich"
version = "0.1.0"
description = "Rich-powered terminal controls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
	"docstring-inheritance>=2.3.0",
	"rich>=14.2.0",
]

[project.scripts]
get_rich = "get_rich.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
	"src/get_rich",
]

[tool.hatch.build.targets.wheel]
include = [
	"src/get_rich",
]

[tool.hatch.build.targets.wheel.sources]
"src/get_rich" = "get_rich"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
